1、增加faucet合约，每次发布erc20对应发布faucet 2、增加领水和eth转账脚本

--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "erc20-token-project",
+  "name": "solidity-project",
   "version": "1.0.0",
-  "description": "ERC20代币项目",
+  "description": "solidity合约+脚本",
   "main": "index.js",
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.js"
+    "deploy": "hardhat run scripts/deploy.js",
+    "deploy:goerli": "hardhat run scripts/deploy.js --network goerli",
+    "deploy:mumbai": "hardhat run scripts/deploy.js --network mumbai",
+    "deploy:bscTestnet": "hardhat run scripts/deploy.js --network bscTestnet",
+    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
+    "faucet": "hardhat run scripts/faucet.js --network sepolia",
+    "transfer": "hardhat run scripts/transfer.js --network sepolia"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
-    "hardhat": "^2.12.0",
-    "dotenv": "^16.0.3"
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@openzeppelin/contracts": "^4.9.0",
+    "hardhat": "^2.17.0",
+    "js-yaml": "^4.1.0"
+  },
+  "dependencies": {
+    "ethers": "^6.13.4"
   }
-} 
+}
